--- a/coco128.yaml
+++ b/coco128.yaml
@@ -1,4 +1,4 @@
-path: ../dataset/coco128  # dataset root dir
+path: ../datasets/coco128  # dataset root dir
 train: images/train2017  # train images (relative to 'path') 128 images
 val: images/train2017  # val images (relative to 'path') 128 images
 test:  # test images (optional)
